--- a/index.html
+++ b/index.html
@@ -1,56 +1,49 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="cs">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Fishing Map — Kroměříž & Bečva</title>
-  <link rel="manifest" href="manifest.webmanifest">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <style>
-    html,body,#map { height:100%; margin:0; padding:0; font-family:Arial, Helvetica, sans-serif; }
-    #map { width:100%; height:100vh; }
-    #panel { position:absolute; left:12px; top:12px; z-index:1000; background:white; padding:8px; max-width:360px; max-height:85vh; overflow:auto; border-radius:6px; box-shadow:0 2px 10px rgba(0,0,0,0.2); }
-    .point { padding:6px; border-bottom:1px solid #eee; cursor:pointer; }
-    .point b { display:block; }
-    .topbar { background:#0b3d91;color:white;padding:8px; text-align:center; font-weight:700; }
-  </style>
-</head>
-<body>
-  <div id="panel">
-    <div class="topbar">Fishing Map — Kroměříž & Bečva (veřejná)</div>
-    <p>Seznam lokací (klepni pro přiblížení). Ke stažení: <a href="data/kromeriz_fishing_points_full.gpx" download>GPX</a> · <a href="data/kromeriz_fishing_points_full.kml" download>KML</a></p>
-    <div id="list"></div>
-    <p style="font-size:12px;color:#666">Upozornění: hloubky jsou odhady / veřejné zdroje. Pro trofejní lov doporučuji sonar/echolot.</p>
-  </div>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <link rel="manifest" href="manifest.webmanifest">
+
+  <title>Fishing Map</title>
+
+  <style>
+    html, body { margin: 0; padding: 0; height: 100%; }
+    #map { height: 100%; width: 100%; }
+  </style>
+
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+</head>
+
+<body>
   <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    // načti body z JSON
-    async function loadPoints(){
-      const r = await fetch('data/points.json');
-      return await r.json();
-    }
+    // Inicializace mapy
+    var map = L.map('map').setView([49.297, 17.393], 12);
 
-    (async function(){
-      const points = await loadPoints();
-      const map = L.map('map').setView([49.31,17.42], 11);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {maxZoom:19, attribution:'&copy; OpenStreetMap contributors'}).addTo(map);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+    }).addTo(map);
 
-      const list = document.getElementById('list');
-      points.forEach(p=>{
-        const m = L.marker([p.lat,p.lon]).addTo(map);
-        const popupHtml = `<b>${p.name}</b><br/><b>Revír:</b> ${p.revir}<br/><b>Hloubka:</b> ${p.depth}<br/><b>Druhy:</b> ${p.species}<br/><div style="margin-top:6px"><b>Poznámky:</b> ${p.notes}</div>`;
-        m.bindPopup(popupHtml);
-
-        const el = document.createElement('div');
-        el.className = 'point';
-        el.innerHTML = `<b>${p.name}</b><small style="color:#333">${p.revir} — ${p.depth}</small>`;
-        el.onclick = ()=>{ map.setView([p.lat,p.lon],14); m.openPopup(); };
-        list.appendChild(el);
+    // Načtení bodů
+    fetch("Datapoints.json")
+      .then(res => res.json())
+      .then(data => {
+        data.forEach(p => {
+          L.marker([p.lat, p.lng])
+           .addTo(map)
+           .bindPopup(`<b>${p.name}</b><br>${p.desc}`);
+        });
       });
-    })();
+  </script>
+
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("sw.js");
+    }
   </script>
 </body>
 </html>
