--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }).addTo(map);
 
     // Načtení bodů
-    fetch("Datapoints.json")
+    fetch("datapoints.json")
       .then(res => res.json())
       .then(data => {
         data.forEach(p => {
