--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     function setMsg(t) { const el = document.getElementById('msg'); if(el) el.textContent = t; }
 
-    fetch('datapoints.json', {cache: 'no-store'})
+    fetch('Datapoints.json', {cache: 'no-store'})
       .then(resp => { if(!resp.ok) throw new Error('HTTP ' + resp.status); return resp.json(); })
       .then(data => {
         setMsg('Načteno ' + data.length + ' bodů. Klikněte na značku pro detail.');
